--- a/practicaMenu/pom.xml
+++ b/practicaMenu/pom.xml
@@ -26,6 +26,7 @@
     </dependencies>
     
      <build>
+        <finalName>practicaMenu</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
